--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,16 @@
 @import "./Vars.scss";
 @import "./Globals.scss";
 
+.dot-spacer {
+  width: 0.3rem;
+  height: 0.3rem;
+  border-radius: 50%;
+  background-color: $secondary-color;
+
+  margin: 0 0.5rem;
+  margin-bottom: .1rem;
+}
+
 .app {
   background-color: $primary-color;
   font-family: $font-base;
